Remove compression ;_; pointless as ram region is only 0x1000 bytes in size

--- a/C/loader-C/README
+++ b/C/loader-C/README
@@ -66,11 +66,11 @@ SET BINARY SREC
 
 ** Code structure / Boot sequence **
 
-[reloc.s]
+[lzf_reloc.s]
 Show character on TIL311
 Disable interrupts (may die here if user code jumped to loader...)
 Reset MFP
-Copy bootloader region into RAM at 0x1000
+Decompress payload into RAM at 0x1000
 Jump to bootloader code in RAM
 
 [loader.s]
